--- a/index.html
+++ b/index.html
@@ -12,7 +12,18 @@
 </head>
 <body>
 
-  <div id="app">
+  <div id="app" class="container text-center">
+    <h1>To Do List</h1>
+
+
+    <div class="container smv-container">
+      <ul>
+        <li v-for='(todo,index) in todos' class="d-flex justify-content-between my-3">
+          <p :class="{'cancellato' : todo.done == true}">{{todos[index].toDoItem}}</p>
+          <i class="fa-solid fa-trash-can"></i>
+        </li>
+      </ul>
+    </div>
     
   </div>
   
