--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       <ul>
         <li v-for='(todo,index) in todos' class="d-flex justify-content-between my-3">
           <p :class="{'cancellato' : todo.done == true}">{{todos[index].toDoItem}}</p>
-          <i class="fa-solid fa-trash-can"></i>
+          <i class="fa-solid fa-trash-can" @click="deleteToDo(index)"></i>
         </li>
       </ul>
     </div>
