--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
 
 
     <div class="container smv-container">
+      <input v-model.trim="newTesto" type="text">
+      <button @click="addToDo">Aggiungi</button>
       <ul>
         <li v-for='(todo,index) in todos' class="d-flex justify-content-between my-3">
           <p :class="{'cancellato' : todo.done == true}">{{todos[index].toDoItem}}</p>
